syntax = "proto3";

package cogip.cogip_defs;

message PB_Coords {
    double x = 1;
    double y = 2;
}
