var searchData=
[
  ['camp_5fleft_48',['CAMP_LEFT',['../group__platforms__pegasus.html#gad21e7bb8b4debcf74f4acc8ad0cbc933',1,'CAMP_LEFT():&#160;platform.hpp'],['../group__platforms__pf__test.html#gad21e7bb8b4debcf74f4acc8ad0cbc933',1,'CAMP_LEFT():&#160;platform.hpp']]],
  ['camp_5fright_49',['CAMP_RIGHT',['../group__platforms__pegasus.html#gafe8dc1d20e67d4cfb47f66dd8ccae899',1,'CAMP_RIGHT():&#160;platform.hpp'],['../group__platforms__pf__test.html#gafe8dc1d20e67d4cfb47f66dd8ccae899',1,'CAMP_RIGHT():&#160;platform.hpp']]],
  ['center_50',['center',['../classcogip_1_1obstacles_1_1Obstacle.html#a7a56e847bb3343367b87e59865bdd2a2',1,'cogip::obstacles::Obstacle']]],
  ['center_5f_51',['center_',['../classcogip_1_1obstacles_1_1Obstacle.html#a3307d0d2f744ecfa67a6be367e33d635',1,'cogip::obstacles::Obstacle']]],
  ['channel_5fnumof_52',['channel_numof',['../structpca9548__conf__t.html#ade4b83f3f9b3caa9fe2cb9a4bc7e0f03',1,'pca9548_conf_t']]],
  ['circle_53',['Circle',['../classcogip_1_1obstacles_1_1Circle.html',1,'cogip::obstacles::Circle'],['../classcogip_1_1obstacles_1_1Circle.html#a759ce7c3824ffd475b06a4a95f5dd477',1,'cogip::obstacles::Circle::Circle()']]],
  ['circle_2ehpp_54',['Circle.hpp',['../Circle_8hpp.html',1,'']]],
  ['clear_55',['clear',['../classcogip_1_1uartpb_1_1ReadBuffer.html#a9fdef60b13bddea859233ac1ded74f2b',1,'cogip::uartpb::ReadBuffer']]],
  ['command_56',['Command',['../classcogip_1_1pf_1_1actuators_1_1pumps_1_1Command.html',1,'cogip::pf::actuators::pumps::Command'],['../classcogip_1_1pf_1_1actuators_1_1servos_1_1Command.html',1,'cogip::pf::actuators::servos::Command'],['../classcogip_1_1shell_1_1Command.html',1,'cogip::shell::Command'],['../classcogip_1_1pf_1_1actuators_1_1pumps_1_1Command.html#a5a7a45bdb6712645851076604ba46b69',1,'cogip::pf::actuators::pumps::Command::Command()'],['../classcogip_1_1pf_1_1actuators_1_1servos_1_1Command.html#aca327fac2d63ee3620c3e210ef872863',1,'cogip::pf::actuators::servos::Command::Command()'],['../classcogip_1_1shell_1_1Command.html#ad7b65c51821e8e21dae4bc20d47e197d',1,'cogip::shell::Command::Command()']]],
  ['command_2ehpp_57',['Command.hpp',['../Command_8hpp.html',1,'']]],
  ['command_5fmax_5fpb_5fargs_58',['COMMAND_MAX_PB_ARGS',['../Command_8hpp.html#abd67fd31810d415a85555f83e54d266f',1,'Command.hpp']]],
  ['compute_59',['compute',['../classcogip_1_1pid_1_1PID.html#a23a7e02bfd84354cb23f975dd32e039d',1,'cogip::pid::PID']]],
  ['conf_60',['conf',['../structctrl__t.html#a0d600d1bc4d55d0ce3dc32be96ddb91f',1,'ctrl_t::conf()'],['../structctrl__quadpid__t.html#abd5bd41a7eeb7692140e4832956ad14c',1,'ctrl_quadpid_t::conf()']]],
  ['connect_61',['connect',['../classcogip_1_1uartpb_1_1UartProtobuf.html#a87b9fb4539bf844e355a70cdc206e7c0',1,'cogip::uartpb::UartProtobuf']]],
  ['control_62',['control',['../structctrl__t.html#a0a812eab391486c15eb46099f707f470',1,'ctrl_t::control()'],['../structctrl__quadpid__t.html#a93645fcc9677a0c26a2af4a7a4f58e28',1,'ctrl_quadpid_t::control()']]],
  ['controller_63',['Controller',['../classcogip_1_1motion__control_1_1Controller.html',1,'cogip::motion_control::Controller&lt; INPUT_SIZE, OUTPUT_SIZE, ParamsT &gt;'],['../classcogip_1_1motion__control_1_1BaseControllerEngine.html#ac5f48b4b2e4264ed7a7d06365621f64e',1,'cogip::motion_control::BaseControllerEngine::controller()'],['../classcogip_1_1motion__control_1_1Controller.html#af9f819b31dbaeebba6cb38a4eee32639',1,'cogip::motion_control::Controller::Controller()']]],
  ['controller_2ehpp_64',['Controller.hpp',['../Controller_8hpp.html',1,'']]],
  ['controller_3c_201_2c_201_2c_20speedpidcontrollerparameters_20_3e_65',['Controller&lt; 1, 1, SpeedPIDControllerParameters &gt;',['../classcogip_1_1motion__control_1_1Controller.html',1,'cogip::motion_control']]],
  ['controller_3c_2011_2c_207_2c_20posestraightfilterparameters_20_3e_66',['Controller&lt; 11, 7, PoseStraightFilterParameters &gt;',['../classcogip_1_1motion__control_1_1Controller.html',1,'cogip::motion_control']]],
  ['controller_3c_203_2c_201_2c_20speedfilterparameters_20_3e_67',['Controller&lt; 3, 1, SpeedFilterParameters &gt;',['../classcogip_1_1motion__control_1_1Controller.html',1,'cogip::motion_control']]],
  ['controller_3c_203_2c_203_2c_20passthroughposepidcontrollerparameters_20_3e_68',['Controller&lt; 3, 3, PassthroughPosePIDControllerParameters &gt;',['../classcogip_1_1motion__control_1_1Controller.html',1,'cogip::motion_control']]],
  ['controller_3c_203_2c_203_2c_20posepidcontrollerparameters_20_3e_69',['Controller&lt; 3, 3, PosePIDControllerParameters &gt;',['../classcogip_1_1motion__control_1_1Controller.html',1,'cogip::motion_control']]],
  ['controller_3c_20input_5fsize_2c_20output_5fsize_2c_20metacontrollerparameters_20_3e_70',['Controller&lt; INPUT_SIZE, OUTPUT_SIZE, MetaControllerParameters &gt;',['../classcogip_1_1motion__control_1_1Controller.html',1,'cogip::motion_control']]],
  ['controller_5f_71',['controller_',['../classcogip_1_1motion__control_1_1BaseControllerEngine.html#ae23375c27605ce8d9addb8e020e064c8',1,'cogip::motion_control::BaseControllerEngine']]],
  ['controller_5fspeed_5floop_5fperiod_5fmsec_72',['CONTROLLER_SPEED_LOOP_PERIOD_MSEC',['../group__platforms__pegasus.html#ga07a575aff9cc49fe868eb5ee53dbb787',1,'CONTROLLER_SPEED_LOOP_PERIOD_MSEC():&#160;platform.hpp'],['../group__platforms__pf__test.html#ga07a575aff9cc49fe868eb5ee53dbb787',1,'CONTROLLER_SPEED_LOOP_PERIOD_MSEC():&#160;platform.hpp']]],
  ['controllers_73',['Controllers',['../group__controllers.html',1,'']]],
  ['coords_74',['Coords',['../classcogip_1_1cogip__defs_1_1Coords.html',1,'cogip::cogip_defs::Coords'],['../classcogip_1_1cogip__defs_1_1Coords.html#a6cc92701a0d2ee01f3f681e380899301',1,'cogip::cogip_defs::Coords::Coords(double x=0.0, double y=0.0)'],['../classcogip_1_1cogip__defs_1_1Coords.html#ad3613369374a908fba68f5910de5a5d1',1,'cogip::cogip_defs::Coords::Coords(const PB_Coords &amp;coords)'],['../classcogip_1_1cogip__defs_1_1Pose.html#a475ce5473bfd306d352a7a45e5e439a2',1,'cogip::cogip_defs::Pose::coords()']]],
  ['coords_2ehpp_75',['Coords.hpp',['../Coords_8hpp.html',1,'']]],
  ['ctrl_2ehpp_76',['ctrl.hpp',['../ctrl_8hpp.html',1,'']]],
  ['ctrl_5f_77',['ctrl_',['../classcogip_1_1planners_1_1Planner.html#aafa175d5d2727a91f1b0e6cc1bd0fb64',1,'cogip::planners::Planner']]],
  ['ctrl_5fcompute_5fspeed_5forder_78',['ctrl_compute_speed_order',['../group__legacy__controller.html#ga2742bdb4d0a38ef349b37de5c7edaa9d',1,'ctrl.hpp']]],
  ['ctrl_5fconfiguration_5ft_79',['ctrl_configuration_t',['../structctrl__configuration__t.html',1,'']]],
  ['ctrl_5fcontrol_5ft_80',['ctrl_control_t',['../structctrl__control__t.html',1,'']]],
  ['ctrl_5fget_5fanti_5fblocking_5fon_81',['ctrl_get_anti_blocking_on',['../group__legacy__controller.html#ga99c88a5ef5cd36e37bbe9957331b9530',1,'ctrl.hpp']]],
  ['ctrl_5fget_5fcurrent_5fcycle_82',['ctrl_get_current_cycle',['../group__legacy__controller.html#ga21dd82dceef26210e033cc531dd78641',1,'ctrl.hpp']]],
  ['ctrl_5fget_5fmode_83',['ctrl_get_mode',['../group__legacy__controller.html#ga9dfcd2950ed03b9c4647ba610c8b4dc0',1,'ctrl.hpp']]],
  ['ctrl_5fget_5fpose_5fcurrent_84',['ctrl_get_pose_current',['../group__legacy__controller.html#ga467ec06a80c1f76d09bf2394fa9243de',1,'ctrl.hpp']]],
  ['ctrl_5fget_5fpose_5fto_5freach_85',['ctrl_get_pose_to_reach',['../group__legacy__controller.html#gaebe4373743c6a7dcc8e9783e3c09dda8',1,'ctrl.hpp']]],
  ['ctrl_5fget_5fspeed_5fcurrent_86',['ctrl_get_speed_current',['../group__legacy__controller.html#ga7ff33dd5db107b25c6773d39a7457e81',1,'ctrl.hpp']]],
  ['ctrl_5fget_5fspeed_5forder_87',['ctrl_get_speed_order',['../group__legacy__controller.html#gadbaf459a0f6b8578f67586d2897d6afd',1,'ctrl.hpp']]],
  ['ctrl_5fis_5fpose_5fintermediate_88',['ctrl_is_pose_intermediate',['../group__legacy__controller.html#gab649786aa82ba90d6d6dec2da49ce8ac',1,'ctrl.hpp']]],
  ['ctrl_5fis_5fpose_5freached_89',['ctrl_is_pose_reached',['../group__legacy__controller.html#ga52e2e067039f27e3e71cc0c15d29cd3b',1,'ctrl.hpp']]],
  ['ctrl_5fmode_5fblocked_90',['CTRL_MODE_BLOCKED',['../group__legacy__controller.html#gga83512a82ac70fd30e2ba0512c79d1001a6063fb0a6a59bde808e4759d8a3cf71d',1,'ctrl.hpp']]],
  ['ctrl_5fmode_5fcb_91',['ctrl_mode_cb',['../structctrl__configuration__t.html#ae16c275af41808f542a44bec401aaaa4',1,'ctrl_configuration_t']]],
  ['ctrl_5fmode_5fcb_5ft_92',['ctrl_mode_cb_t',['../group__legacy__controller.html#ga32add690e6ab2833b0ca3f83f9e043cb',1,'ctrl.hpp']]],
  ['ctrl_5fmode_5fidle_93',['CTRL_MODE_IDLE',['../group__legacy__controller.html#gga83512a82ac70fd30e2ba0512c79d1001ad322dc747a4d15c36699bcd98d8ebd08',1,'ctrl.hpp']]],
  ['ctrl_5fmode_5fnumof_94',['CTRL_MODE_NUMOF',['../group__legacy__controller.html#gga83512a82ac70fd30e2ba0512c79d1001a8a29387a8487f8e070c2ec9142a49b39',1,'ctrl.hpp']]],
  ['ctrl_5fmode_5fpassthrough_95',['CTRL_MODE_PASSTHROUGH',['../group__legacy__controller.html#gga83512a82ac70fd30e2ba0512c79d1001a829836e6cc15397b473e1879d92a6eea',1,'ctrl.hpp']]],
  ['ctrl_5fmode_5frunning_96',['CTRL_MODE_RUNNING',['../group__legacy__controller.html#gga83512a82ac70fd30e2ba0512c79d1001acf50fdd5b3b480ba8042dc33ea9e92d1',1,'ctrl.hpp']]],
  ['ctrl_5fmode_5frunning_5fspeed_97',['CTRL_MODE_RUNNING_SPEED',['../group__legacy__controller.html#gga83512a82ac70fd30e2ba0512c79d1001ae5ca9b6e2706cbc82f1ea2c241e1331c',1,'ctrl.hpp']]],
  ['ctrl_5fmode_5fstop_98',['CTRL_MODE_STOP',['../group__legacy__controller.html#gga83512a82ac70fd30e2ba0512c79d1001a50346583ca11642d7966e22efb7d0c18',1,'ctrl.hpp']]],
  ['ctrl_5fmode_5ft_99',['ctrl_mode_t',['../group__legacy__controller.html#ga83512a82ac70fd30e2ba0512c79d1001',1,'ctrl.hpp']]],
  ['ctrl_5fplatform_5fconfiguration_5ft_100',['ctrl_platform_configuration_t',['../structctrl__platform__configuration__t.html',1,'']]],
  ['ctrl_5fpost_5fmode_5fcb_101',['ctrl_post_mode_cb',['../structctrl__platform__configuration__t.html#aeb144db0de0403e3b923a85b1e3b5cde',1,'ctrl_platform_configuration_t']]],
  ['ctrl_5fpost_5fmode_5fcb_5ft_102',['ctrl_post_mode_cb_t',['../group__legacy__controller.html#ga7b80d1d208e2a69888bc71a684d85c1a',1,'ctrl.hpp']]],
  ['ctrl_5fpre_5fmode_5fcb_103',['ctrl_pre_mode_cb',['../structctrl__platform__configuration__t.html#ad2cb89558027fd6adf2a5637ddfc6093',1,'ctrl_platform_configuration_t']]],
  ['ctrl_5fpre_5fmode_5fcb_5ft_104',['ctrl_pre_mode_cb_t',['../group__legacy__controller.html#ga6249a908e06e43b827b251906a84b664',1,'ctrl.hpp']]],
  ['ctrl_5fquadpid_5fconf_105',['ctrl_quadpid_conf',['../group__legacy__quadpid.html#gadad5095d3afcebe949747c8797aba447',1,'quadpid.hpp']]],
  ['ctrl_5fquadpid_5fingame_106',['ctrl_quadpid_ingame',['../group__legacy__quadpid.html#ga2639431d56ddd5b2ca5578d24200cc7b',1,'quadpid.hpp']]],
  ['ctrl_5fquadpid_5fnopid_107',['ctrl_quadpid_nopid',['../group__legacy__quadpid.html#gacbda3571b7e093ffdb39af991d43d587',1,'quadpid.hpp']]],
  ['ctrl_5fquadpid_5fparameters_5ft_108',['ctrl_quadpid_parameters_t',['../structctrl__quadpid__parameters__t.html',1,'']]],
  ['ctrl_5fquadpid_5frunning_5fspeed_109',['ctrl_quadpid_running_speed',['../group__legacy__quadpid.html#ga5a2742885f1f7d2e3df5e80b1ac7f938',1,'quadpid.hpp']]],
  ['ctrl_5fquadpid_5fset_5fpose_5fto_5freach_5fcb_110',['ctrl_quadpid_set_pose_to_reach_cb',['../group__legacy__quadpid.html#gac388c076f3732139d4be80868bd0bea5',1,'quadpid.hpp']]],
  ['ctrl_5fquadpid_5fspeed_111',['ctrl_quadpid_speed',['../group__legacy__quadpid.html#ga99ba79d1b7d1735cdf16aede0a14ec04',1,'quadpid.hpp']]],
  ['ctrl_5fquadpid_5fstop_112',['ctrl_quadpid_stop',['../group__legacy__quadpid.html#ga1a9ce19471b7208c47908f534cc28af0',1,'quadpid.hpp']]],
  ['ctrl_5fquadpid_5ft_113',['ctrl_quadpid_t',['../structctrl__quadpid__t.html',1,'']]],
  ['ctrl_5fregister_5fspeed_5forder_5fcb_114',['ctrl_register_speed_order_cb',['../group__legacy__controller.html#ga6c6d4d2f989617fc45f2cedd8840a101',1,'ctrl.hpp']]],
  ['ctrl_5fregul_5fidle_115',['CTRL_REGUL_IDLE',['../group__legacy__quadpid.html#gga3fde4952c6a108b241aeea054e68638da8794ddd7ad76435ac3d260ed7c01a11d',1,'quadpid.hpp']]],
  ['ctrl_5fregul_5fpose_5fangl_116',['CTRL_REGUL_POSE_ANGL',['../group__legacy__quadpid.html#gga3fde4952c6a108b241aeea054e68638daae39e9247308653dbcdaf02263fbae49',1,'quadpid.hpp']]],
  ['ctrl_5fregul_5fpose_5fdist_117',['CTRL_REGUL_POSE_DIST',['../group__legacy__quadpid.html#gga3fde4952c6a108b241aeea054e68638daffa3f198dfc6694472de73b4cf504aba',1,'quadpid.hpp']]],
  ['ctrl_5fregul_5fpose_5fpre_5fangl_118',['CTRL_REGUL_POSE_PRE_ANGL',['../group__legacy__quadpid.html#gga3fde4952c6a108b241aeea054e68638da761f717aeb0b6f89cc21743626087faf',1,'quadpid.hpp']]],
  ['ctrl_5fregul_5ft_119',['ctrl_regul_t',['../group__legacy__quadpid.html#ga3fde4952c6a108b241aeea054e68638d',1,'quadpid.hpp']]],
  ['ctrl_5fset_5fallow_5freverse_120',['ctrl_set_allow_reverse',['../group__legacy__controller.html#ga9f67326dd799c1a1b5b8dd6a019e9edc',1,'ctrl.hpp']]],
  ['ctrl_5fset_5fanti_5fblocking_5fon_121',['ctrl_set_anti_blocking_on',['../group__legacy__controller.html#gae2919b217d3f0e05f28c053ea76a4caf',1,'ctrl.hpp']]],
  ['ctrl_5fset_5fmode_122',['ctrl_set_mode',['../group__legacy__controller.html#ga805d9b45a7e648962b7eef5607d9ee7f',1,'ctrl.hpp']]],
  ['ctrl_5fset_5fpose_5fcurrent_123',['ctrl_set_pose_current',['../group__legacy__controller.html#gab5e4bfefef07968449475aa382f588f9',1,'ctrl.hpp']]],
  ['ctrl_5fset_5fpose_5fintermediate_124',['ctrl_set_pose_intermediate',['../group__legacy__controller.html#gaeb2bc0490992071618839a13152c5ed6',1,'ctrl.hpp']]],
  ['ctrl_5fset_5fpose_5freached_125',['ctrl_set_pose_reached',['../group__legacy__controller.html#gad93d60c68e7c093f2e753d9d54db51b8',1,'ctrl.hpp']]],
  ['ctrl_5fset_5fpose_5fto_5freach_126',['ctrl_set_pose_to_reach',['../group__legacy__controller.html#gacbc6e33e5852d213e27f3503df9490ea',1,'ctrl.hpp']]],
  ['ctrl_5fset_5fpose_5fto_5freach_5fcb_5ft_127',['ctrl_set_pose_to_reach_cb_t',['../group__legacy__controller.html#ga8f12ad3ddc94039e0cff37db14ceb783',1,'ctrl.hpp']]],
  ['ctrl_5fset_5fspeed_5forder_128',['ctrl_set_speed_order',['../group__legacy__controller.html#gae7b858c34fd7c4d410d7cb33f77e95cb',1,'ctrl.hpp']]],
  ['ctrl_5ft_129',['ctrl_t',['../structctrl__t.html',1,'ctrl_t'],['../group__legacy__controller.html#ga180894284b940092b53725eaf050822c',1,'ctrl_t():&#160;ctrl.hpp']]],
  ['current_5fcommands_130',['current_commands',['../shell__menu__private_8hpp.html#a399fcc54bbb5150646c445839e88f60c',1,'cogip::shell']]],
  ['current_5fcycle_131',['current_cycle',['../structctrl__control__t.html#ae67bbebdf2cd7aef4885815d7981e059',1,'ctrl_control_t::current_cycle()'],['../classcogip_1_1motion__control_1_1BaseControllerEngine.html#a6f8ab3a68060a74333c61da7c2e18d88',1,'cogip::motion_control::BaseControllerEngine::current_cycle()']]],
  ['current_5fcycle_5f_132',['current_cycle_',['../classcogip_1_1motion__control_1_1BaseControllerEngine.html#a9b86c82b2e2ec84471c66d383d1b3233',1,'cogip::motion_control::BaseControllerEngine']]],
  ['current_5fmax_5fspeed_5fangular_133',['current_max_speed_angular',['../classcogip_1_1path_1_1Path.html#a927b66292a1ec7d6497f63c3b6db4d51',1,'cogip::path::Path']]],
  ['current_5fmax_5fspeed_5flinear_134',['current_max_speed_linear',['../classcogip_1_1path_1_1Path.html#aca708e0ee6f7a1b9d65af6b56f169e54',1,'cogip::path::Path']]],
  ['current_5fmenu_135',['current_menu',['../shell__menu_8hpp.html#a4f4d0b0e4ef2462dcb7fe3bffb66c05b',1,'cogip::shell']]],
  ['current_5fmode_136',['current_mode',['../structctrl__control__t.html#ab90d024b5add80decab75bd9a27ceb10',1,'ctrl_control_t']]],
  ['current_5fpose_137',['current_pose',['../classcogip_1_1path_1_1Path.html#a124926f5a5c0655232750baff4f43729',1,'cogip::path::Path::current_pose()'],['../classcogip_1_1motion__control_1_1PlatformEngine.html#a869061c169b239e2fe6f9f32a46887bf',1,'cogip::motion_control::PlatformEngine::current_pose()']]],
  ['current_5fpose_5findex_5f_138',['current_pose_index_',['../classcogip_1_1path_1_1Path.html#ab1af600a4756e4d52b91db548b51ce50',1,'cogip::path::Path']]],
  ['current_5fspeed_139',['current_speed',['../classcogip_1_1motion__control_1_1PlatformEngine.html#aa1ec97015637e5be771da29cac6556ca',1,'cogip::motion_control::PlatformEngine']]],
  ['cogip_20vacuum_20pump_20driver_140',['COGIP vacuum pump driver',['../group__driver__vacuum__pump.html',1,'']]],
  ['cogip_20common_20definitions_141',['Cogip common definitions',['../group__lib__cogip__defs.html',1,'']]],
  ['common_142',['Common',['../group__motion__control__common.html',1,'']]],
  ['common_20platform_20shell_143',['Common platform shell',['../group__platforms__shell.html',1,'']]]
];
